...

  const formattedDate = useMemo(() => moment(date).format('YYYY-MM-DD'), [date])

  return (
    <SafeAreaView
      style={[CommonStyles.container, isLoading && styles.loading]}
      testID="EntriesScreen">
      <View style={styles.header}>
        <Link onPress={() => changeDate(moment(date).subtract(1, 'day').toDate())}>
          <Icon name="chevron-left" color={Color.black} />
        </Link>
        <Text>{formattedDate}</Text>
        <Link
...
